Completed hero-landing section -Fixed spacing of left & right content -Styled button

--- a/style.css
+++ b/style.css
@@ -18,14 +18,19 @@ body {
 }
 
 .container-padding {
-    padding: 0px 20%;
+    padding: 0px 19%;
 }
 
 
 /** Hero Section **/
+
+/* Header */
 .hero-section {
     background-color: var(--bgColor1);
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .header {
@@ -52,5 +57,65 @@ body {
     color: var(--bgColor3);
     font-size: 18px;
 }
+/* Header */
+
+/* Hero Content */
+
+.landing-content {
+    display: flex;
+    padding: 60px 0px;
+    flex: 1 0 auto;
+    gap: 0px;
+}
+
+.left-content {
+    flex: 1 1 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: var(--bgColor3);
+    font-size: 18px;
+
+}
+
+.left-content h1 {
+    font-size: 48px;
+    font-weight: 800;
+    color: var(--heroHeadColor);
+}
+
+.left-content > * {
+    margin: 0px;
+}
+
+.right-content {
+    flex: 0 1 50%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.placehold-img {
+    flex: 0 1 500px;
+    background-color: var(--bgColor3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+    color: var(--heroHeadColor)
+}
+
+.left-content button {
+    background-color: var(--bgColor2);
+    border-radius: 10px;
+    border: none;
+    width: 120px;
+    height: 35px;
+    color: var(--heroHeadColor);
+    font-weight: 800;
+    margin-top: 16px;
+}
+/* Hero Content*/
+
 
 /** Hero Section **/
